Rehydrate ship from last m3u8 playlist (#63)
Ship rehydrates from last shipped .m3u8 playlist file #180723357

* M3U8 manager class to actually parse m3u8 files
* ship HLS segments starting N before "now"